--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       .attr("width", window.innerWidth)
       .attr("height", window.innerHeight);
 
-    mapboxgl.accessToken = 'pk.eyJ1IjoieHhmZmxsIiwiYSI6ImNrOTkzeWdpaDBya2QzbHF4b2lrdWJsdTkifQ.yScYDn4ssO0b9h1mRYzEhA';
+    mapboxgl.accessToken = 'pk.eyJ1IjoidWh3YW5nMyIsImEiOiJja3d0bGh4cG8wemxtMm5xcTJ1anc4ajlxIn0.GPUcPfwoUXy6pItqRUvifw';
     var map = new mapboxgl.Map({
 		container: 'map', // container ID
 		style: 'mapbox://styles/mapbox/dark-v10', // style URL //dark-v10
